add k8s yaml add grpc client
