# pkg/api/petpb/pet.swagger.json
@@ -11,6 +11,36 @@
     "application/json"
   ],
   "paths": {
+    "/ping": {
+      "get": {
+        "operationId": "PetService_Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1Id"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "PetService"
+        ]
+      }
+    },
     "/v1/owners": {
       "get": {
         "operationId": "PetService_ListOwner",
@@ -372,6 +402,14 @@
           "items": {
             "$ref": "#/definitions/protobufAny"
           }
+        }
+      }
+    },
+    "v1Id": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
         }
       }
     },
